tests/e2e/try_scope_invalid5.error
Error: syntax error in story at line 1, column 1

1|    try
      ^^^^^

E0137: Scope variable type mismatch: `a` of int is not compatible with `a` of string.
